syntax = "proto3"; //声明protobuf版本

package fixbug;     //声明代码所在的包

//定义下面选项，表示生成service服务类和rpc方法描述，默认不生成
option cc_generic_services = true;

message ResultCode
{
    int32 errocode = 1;
    bytes errmsg = 2; 
}

//数据 列表 映射表
// 定义登录请求消息类型  name   pwd
message LoginRequest
{
    bytes name = 1; //1表示的是第一字段
    bytes pwd = 2;
}

// 定义登录响应消息类型
message LoginResponse
{
    ResultCode result = 1;
    bool success = 2;
}
message GetFriendListsRequest
{
    uint32 userid = 1;
}

//定义用户
message User
{
    bytes name = 1;
    uint32 age = 2;
    enum Sex
    {
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}
//好友列表
message GetFriendListsResponse
{
    ResultCode result = 1;
    repeated User friend_list = 2;//利用repeated定义了一个列表类型
}

//在protobuf 里面定义描述rpc的方法类型 -service,头文件需要加入 cc_generic_services
service UserServiceRpc
{
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc GetFriendLists(GetFriendListsRequest) returns(GetFriendListsResponse);
}